устранение деления на ноль